// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REQUEST_TOKENIZATION: Disable button, Show form 1`] = `
<div
  className="Tokenization"
>
  <Button
    onClick={[Function]}
  >
    Request token creation
  </Button>
  <Dialog
    actions={
      Array [
        Object {
          "buttonText": "Submit",
          "buttonVariant": "primary",
          "id": "submit",
          "type": "submit",
        },
        Object {
          "buttonText": "Cancel",
          "buttonVariant": "secondary",
          "callback": [Function],
          "id": "cancel",
        },
      ]
    }
    onSubmit={[Function]}
    show={true}
    size="lg"
  >
    <TokenCreationForm
      colors={
        Object {
          "background": "#eff3fe",
          "borderColor": "#e6007a",
          "foreground": "#000000",
        }
      }
      control={
        Object {
          "_defaultValues": Object {},
          "_fields": Object {},
          "_formState": Object {
            "dirtyFields": Object {},
            "errors": Object {},
            "isDirty": false,
            "isSubmitSuccessful": false,
            "isSubmitted": false,
            "isSubmitting": false,
            "isValid": false,
            "isValidating": false,
            "submitCount": 0,
            "touchedFields": Object {},
          },
          "_formValues": Object {},
          "_getFieldArrayValue": [Function],
          "_getIsDirty": [Function],
          "_getWatch": [Function],
          "_isInAction": false,
          "_isMounted": false,
          "_names": Object {
            "array": Set {},
            "mount": Set {},
            "unMount": Set {},
            "watch": Set {},
          },
          "_proxyFormState": Object {
            "dirtyFields": false,
            "errors": "all",
            "isDirty": false,
            "isValid": false,
            "isValidating": false,
            "touchedFields": false,
          },
          "_removeFields": [Function],
          "_shouldUnregister": undefined,
          "_subjects": Object {
            "array": ge {
              "observers": Array [],
            },
            "control": ge {
              "observers": Array [],
            },
            "state": ge {
              "observers": Array [],
            },
            "watch": ge {
              "observers": Array [],
            },
          },
          "_updateFieldArray": [Function],
          "_updateProps": [Function],
          "_updateValid": [Function],
          "_updateValues": [Function],
          "register": [Function],
          "unregister": [Function],
        }
      }
      errors={Object {}}
    />
  </Dialog>
</div>
`;

exports[`START: Enable button 1`] = `
<div
  className="Tokenization"
>
  <Button
    onClick={[Function]}
  >
    Request token creation
  </Button>
  <Dialog
    actions={
      Array [
        Object {
          "buttonText": "Submit",
          "buttonVariant": "primary",
          "id": "submit",
          "type": "submit",
        },
        Object {
          "buttonText": "Cancel",
          "buttonVariant": "secondary",
          "callback": [Function],
          "id": "cancel",
        },
      ]
    }
    onSubmit={[Function]}
    show={false}
    size="lg"
  >
    <TokenCreationForm
      colors={
        Object {
          "background": "#eff3fe",
          "borderColor": "#e6007a",
          "foreground": "#000000",
        }
      }
      control={
        Object {
          "_defaultValues": Object {},
          "_fields": Object {},
          "_formState": Object {
            "dirtyFields": Object {},
            "errors": Object {},
            "isDirty": false,
            "isSubmitSuccessful": false,
            "isSubmitted": false,
            "isSubmitting": false,
            "isValid": false,
            "isValidating": false,
            "submitCount": 0,
            "touchedFields": Object {},
          },
          "_formValues": Object {},
          "_getFieldArrayValue": [Function],
          "_getIsDirty": [Function],
          "_getWatch": [Function],
          "_isInAction": false,
          "_isMounted": false,
          "_names": Object {
            "array": Set {},
            "mount": Set {},
            "unMount": Set {},
            "watch": Set {},
          },
          "_proxyFormState": Object {
            "dirtyFields": false,
            "errors": "all",
            "isDirty": false,
            "isValid": false,
            "isValidating": false,
            "touchedFields": false,
          },
          "_removeFields": [Function],
          "_shouldUnregister": undefined,
          "_subjects": Object {
            "array": ge {
              "observers": Array [],
            },
            "control": ge {
              "observers": Array [],
            },
            "state": ge {
              "observers": Array [],
            },
            "watch": ge {
              "observers": Array [],
            },
          },
          "_updateFieldArray": [Function],
          "_updateProps": [Function],
          "_updateValid": [Function],
          "_updateValues": [Function],
          "register": [Function],
          "unregister": [Function],
        }
      }
      errors={Object {}}
    />
  </Dialog>
</div>
`;
